# pytest-prefer-nested-dup-tests

./: .coveragerc  .flake8  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CONTRIBUTING.rst  README.md  README.rst  conda-environment.yml  pyproject.toml  pytest_prefer_nested_dup_tests.py  setup.cfg  setup.py  setup.py.old  tox.ini
.github/workflows/: codeql-analysis.yml  main.yml
src/pytest_prefer_nested_dup_tests/: __impl.py  __init__.py
tests/: conftest.py  test___impl.py  test_pytest_prefer_nested_dup_tests.py
tests/deeptest/: test___impl.py
tests/deeptest/deepertest/: test___impl.py
