[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"



[tool.pytest.ini_options]
minversion = 7.1
# make XPASS (“unexpectedly passing”) result to fail the test suite
xfail_strict = true
addopts = [
  # report details (verbose)
  "-v",
  # xdist - number of parallel test executors
  "-n=auto",
  # report the local variables for every failure with the stacktrace
  "-l",
  # report the reasons for all tests that skipped, xfailed, xpassed, etc EXCEPT passed/Passed w/ Output
  "-ra",
  # execute doctests directly from docstrings of your classes and functions
  "--doctest-modules",
  "--doctest-continue-on-failure",
  # coverage (configured via .coveragerc)
  "--cov",
  # output coverage to terminal
  "--cov-report=term",
  # output coverage as html report (for human browsing from CI)
  "--cov-report=html",
  # output coverage as xml report (for CI reporting and VSCode reporting)
  "--cov-report=xml",
  # show local variable values in traceback
  "--showlocals",
  # raise errors if using an unregistered marker
  "--strict-markers",
  # raise errors if the config is bad
  "--strict-config",
  # let's adopt the future mode already
  "--import-mode=importlib",
]
filterwarnings = [
  "error",
]
log_cli_level = "debug"
# norecursedirs = "*"
# testpaths =
    # "tests"
    # "integration"
