[bdist_wheel]
universal = 1

[metadata]
name = pytest_prefer_nested_dup_tests
version = 0.1.0
author = Marximus Maximus
author_email = marximus@marximus.com
maintainer = Marximus Maximus
maintainer_email = marximus@marximus.com
license = MIT
url = https://github.com/MarximusMaximus/pytest-prefer-nested-dup-tests
description = A Pytest plugin to drop duplicated tests during collection, but prefer nested package versions
project_urls =
    Bug Tracker = https://github.com/MarximusMaximus/pytest-prefer-nested-dup-tests/issues
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 4 - Beta
    Framework :: Pytest
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
install_requires =
    pytest>=7.1.1

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

[options.entry_points]
pytest11 =
    prefer-nested-dup-tests = pytest_prefer_nested_dup_tests
